--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "~1.11.2",
     "bootstrap": "~3.3.4",
     "modernizr": "~2.8.3",
     "angular": "~1.3.15",
