angular-lodash-string project added

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "font-awesome": "~4.3.0",
     "jtablescroll": "~1.6.0",
     "ko-datatable": "~1.0.3",
-    "knockback": "~0.20.5"
+    "knockback": "~0.20.5",
+    "angular-lodash-string": "~1.0.5"
   }
 }
