--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "feedparser": "^1.0.1",
     "request": "^2.55.0",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "imagemin": "^3.2.0"
   }
 }
