--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,9 @@
-image: mhart/alpine-node
-script:
-  - apk add --no-cache make gcc g++ python
-  - npm i -g yarn
-  - npm install -g @angular/cli
-  - yarn
-  - ng build --prod
+pipeline:
+  build:
+    image: mhart/alpine-node
+    commands:
+      - apk add --no-cache make gcc g++ python
+      - npm i -g yarn
+      - npm install -g @angular/cli
+      - yarn
+      - ng build --prod
