--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
+    "firebase": "^3.7.5",
     "font-awesome": "^4.6.3",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
