--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
-    "@angular/flex-layout": "^2.0.0-beta.7",
+    "@angular/flex-layout": "2.0.0-rc.1",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "angularfire2": "^2.0.0-beta.8",
+    "angularfire2": "2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.7.5",
     "font-awesome": "^4.6.3",
@@ -35,19 +35,19 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "^2.5.47",
     "@types/node": "^7.0.12",
-    "codelyzer": "~2.0.0-beta.1",
+    "codelyzer": "^2.1.1",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "^5.1.1",
+    "ts-node": "^3.0.2",
+    "tslint": "^5.1.0",
     "typescript": "~2.2.2"
   }
 }
