--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.0",
   "license": "MIT",
   "scripts": {
-    "start": "ng server",
+    "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
     "format": "clang-format -i -style=file --glob=src/**/*.ts",
     "pree2e": "webdriver-manager update",
@@ -11,30 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/flex-layout": "^2.0.0-beta.7",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
+    "@angular/animations": "^4.1.0",
+    "@angular/common": "^4.1.0",
+    "@angular/compiler": "^4.1.0",
+    "@angular/core": "^4.1.0",
+    "@angular/flex-layout": "^2.0.0-rc.1",
+    "@angular/forms": "^4.1.0",
+    "@angular/http": "^4.1.0",
     "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/platform-browser": "^4.1.0",
+    "@angular/platform-browser-dynamic": "^4.1.0",
+    "@angular/platform-server": "^4.1.0",
+    "@angular/router": "^4.1.0",
+    "angular2-froala-wysiwyg": "^2.5.1-2",
+    "angular2-material-datepicker": "^0.5.0",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
-    "firebase": "^3.7.5",
+    "firebase": "^3.9.0",
     "font-awesome": "^4.6.3",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.4"
+    "uuid": "^3.0.1",
+    "zone.js": "^0.8.9"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "^1.0.1",
+    "@angular/compiler-cli": "^4.1.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^7.0.12",
     "codelyzer": "~2.0.0-beta.1",
@@ -48,6 +52,6 @@
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.2.2"
+    "typescript": "^2.2.2"
   }
 }
