--- a/package.json
+++ b/package.json
@@ -11,37 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.0",
-    "@angular/common": "^4.1.0",
-    "@angular/compiler": "^4.1.0",
-    "@angular/core": "^4.1.0",
-    "@angular/flex-layout": "2.0.0-rc.1",
-    "@angular/forms": "^4.1.0",
-    "@angular/http": "^4.1.0",
-    "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "^4.1.0",
-    "@angular/platform-browser-dynamic": "^4.1.0",
-    "@angular/platform-server": "^4.1.0",
-    "@angular/router": "^4.1.0",
-    "angular2-froala-wysiwyg": "^2.5.1-2",
+    "@angular/animations": "^9.0.0-rc.13",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^9.0.0-rc.13",
+    "@angular/compiler": "^9.0.0-rc.13",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/core": "^9.0.0-rc.13",
+    "@angular/fire": "^5.4.0",
+    "@angular/forms": "^9.0.0-rc.13",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^9.0.0-rc.13",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.13",
+    "@angular/platform-server": "^9.0.0-rc.13",
+    "@angular/router": "^9.0.0-rc.13",
     "angular2-material-datepicker": "^0.5.0",
-    "angularfire2": "2.0.0-beta.8",
     "core-js": "^2.4.1",
-    "firebase": "^3.9.0",
+    "firebase": "^7.8.0",
     "font-awesome": "^4.6.3",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
-    "rxjs": "^5.1.0",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.0.0-rc.0",
     "ts-helpers": "^1.1.1",
+    "tslib": "^1.10.0",
     "uuid": "^3.0.1",
-    "zone.js": "^0.8.9"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.1",
-    "@angular/compiler-cli": "^4.1.0",
+    "@angular-devkit/build-angular": "~0.803.24",
+    "@angular/cli": "^8.3.24",
     "@types/jasmine": "^2.5.47",
     "@types/node": "^7.0.12",
-    "codelyzer": "^2.1.1",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.6.0",
@@ -52,6 +53,6 @@
     "protractor": "^5.1.1",
     "ts-node": "^3.0.2",
     "tslint": "^5.1.0",
-    "typescript": "^2.2.2"
+    "typescript": "~3.7.4"
   }
 }
