--- a/package.json
+++ b/package.json
@@ -3,56 +3,63 @@
   "version": "2.2.0",
   "license": "MIT",
   "scripts": {
+    "ng": "ng",
     "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
-    "format": "clang-format -i -style=file --glob=src/**/*.ts",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.13",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^9.0.0-rc.13",
-    "@angular/compiler": "^9.0.0-rc.13",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/core": "^9.0.0-rc.13",
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
     "@angular/fire": "^5.4.0",
-    "@angular/forms": "^9.0.0-rc.13",
+    "@angular/flex-layout": "^9.0.0-beta.28",
+    "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^9.0.0-rc.13",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.13",
-    "@angular/platform-server": "^9.0.0-rc.13",
-    "@angular/router": "^9.0.0-rc.13",
-    "angular2-material-datepicker": "^0.5.0",
-    "core-js": "^2.4.1",
-    "firebase": "^7.8.0",
-    "font-awesome": "^4.6.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "angular-froala-wysiwyg": "^3.1.0",
+    "firebase": ">= 5.5.7 <8",
     "hammerjs": "^2.0.8",
-    "material-design-icons": "^3.0.1",
-    "rxjs": "^6.5.4",
-    "rxjs-compat": "^6.0.0-rc.0",
-    "ts-helpers": "^1.1.1",
+    "lodash": "^4.17.15",
+    "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "uuid": "^3.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
     "@angular-devkit/build-angular": "~0.803.24",
-    "@angular/cli": "^8.3.24",
-    "@types/jasmine": "^2.5.47",
-    "@types/node": "^7.0.12",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^1.6.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.6.0",
-    "protractor": "^5.1.1",
-    "ts-node": "^3.0.2",
-    "tslint": "^5.1.0",
-    "typescript": "~3.7.4"
+    "@angular/cli": "~8.3.24",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
+    "firebase-tools": "^7.12.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
   }
 }
