--- a/package.json
+++ b/package.json
@@ -12,40 +12,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
+    "@angular/animations": "~9.0.0-rc.13",
+    "@angular/cdk": "~9.0.0-rc.9",
+    "@angular/common": "~9.0.0-rc.13",
+    "@angular/compiler": "~9.0.0-rc.13",
+    "@angular/core": "~9.0.0-rc.13",
     "@angular/fire": "^5.4.0",
     "@angular/flex-layout": "^9.0.0-beta.28",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@angular/forms": "~9.0.0-rc.13",
+    "@angular/material": "^9.0.0-rc.9",
+    "@angular/platform-browser": "~9.0.0-rc.13",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.13",
+    "@angular/router": "~9.0.0-rc.13",
+    "@fortawesome/angular-fontawesome": "^0.6.0-alpha.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "angular-froala-wysiwyg": "^3.1.0",
     "firebase": ">= 5.5.7 <8",
-    "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "@angular-devkit/build-angular": "~0.803.24",
-    "@angular/cli": "~8.3.24",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.900.0-rc.12",
+    "@angular/cli": "~9.0.0-rc.12",
+    "@angular/compiler-cli": "~9.0.0-rc.13",
+    "@angular/language-service": "~9.0.0-rc.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "firebase-tools": "^7.12.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
@@ -60,6 +59,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   }
 }
